--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="tooltip">Notofications</div>
       </div>
 
-      <img class="current-user-picture" src="channel/my-channel.jpeg" alt="">
+      <img class="current-user-picture" src="Channel/my-channel.jpeg" alt="">
     </div>
   </div>
   <!-- This is a side bar  -->
@@ -106,7 +106,7 @@
 
         <!-- This is a channel photo div you can see in this below -->
         <div class="video-info-grid">
-          <div class="channel-picture">
+          <div class="Channel-picture">
             <img class="profile-pic" src="channel/thumbnail-2.jpeg" alt="">
           </div>
 
