--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <!-- This is a channel photo div you can see in this below -->
         <div class="video-info-grid">
           <div class="channel-picture">
-            <img class="profile-pic" src="channel/channel-3.jpeg" alt="">
+            <img class="profile-pic" src="Channel/channel-3.jpeg" alt="">
           </div>
 
           <!-- This is a video Title and other Titles div you can see porpore. -->
@@ -261,7 +261,7 @@
         <!-- This is a channel photo div you can see in this below -->
         <div class="video-info-grid">
           <div class="channel-picture">
-            <img class="profile-pic" src="channel/channel-5.jpeg" alt="">
+            <img class="profile-pic" src="Channel/channel-5.jpeg" alt="">
           </div>
 
           <!-- This is a video Title and other Titles div you can see porpore. -->
