--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <!-- This is a channel photo div you can see in this below -->
         <div class="video-info-grid">
           <div class="Channel-picture">
-            <img class="profile-pic" src="channel/thumbnail-2.jpeg" alt="">
+            <img class="profile-pic" src="Channel/thumbnail-2.jpeg" alt="">
           </div>
 
           <!-- This is a video Title and other Titles div you can see porpore. -->
